--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h2>Hello 🙋🏻‍♂️</h2>
       <p>As an IT enthusiast with a keen interest in business development, I am driven by my passion for information systems and their transformative potential. With a solid foundation in IT infrastructure and a proactive approach to problem-solving, I thrive in dynamic environments where innovation and collaboration are valued. My diverse skill set allows me to navigate seamlessly between technical challenges and strategic initiatives, delivering impactful solutions that drive business growth and enhance operational efficiency. Whether it’s optimizing systems for peak performance or leveraging emerging technologies to stay ahead of the curve, I am committed to driving positive change and making a lasting impact in the field of information technology.</p>
    <hr>
-        <h2>Eductation 🎓</h2>
+        <h2>Education 🎓</h2>
         <h3>ST. JOSEPH'S INSTITUTE OF TECHNOLOGY, OMR- CHENNAI</h3>
         <p>Bachelor of Engineering - Computer Science</p>
     <hr>
