--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="top-container">
 <h1>Harish Krishnaraj</h1>
 <p class="ps">IT Specialist Engineer</p>
-<a class="ps">📍Chennai, India</a>
+<a class="ps" href="https://maps.app.goo.gl/XA7SEYYQGYKZrqTS9">📍Chennai, India</a>
   </div>
   <div class="middle-container">
       <h2>Hello 🙋🏻‍♂️</h2>
@@ -28,11 +28,21 @@
             This project encapsulates the essence of simplicity and fun, making it a favourite pastime among players of all ages. Its intuitive interface ensures an engaging experience for everyone, whether you’re reliving childhood memories or discovering the joy of Hand Cricket for the first time. Join the fun and experience the thrill of this timeless game right at your fingertips!</p>
             <a class="footer-link" href="https://harish-sy.github.io/HandCricket/hand%20cricket/">Play 🏏</a>
     <hr>
-      <h2>Professional Experience 🧑🏻‍💻</h2>
+    <h3 >SAFEGUARD AND MONITORING SYSTEM FOR DISABLED ELDERS</h3>
+        <p>It is a prototype for home monitoring and safeguard systems that is used for disabled elder people. We use different sensors like Temperature sensor, Vibration sensor, Heart beat Sensor, PIR sensor. These sensors are used to get input from the users environment and receive signals to the safeguard neighbour person Via mobile Application .This is a signal to notify that the elder persons are in danger.</p>
+            
+    <hr> 
+    <h3 >Speed Breaker Detection and Warning System</h3>
+    <p>There is evidence to support the claim that speed breakers can cause accidents and injury. Where a vehicle approaches a speed breaker at a speed greater than threshold velocity , the risk of accident or injury is substantial. Speed breakers are inconspicuous in low visibility condition, like at night, or where there is fog, rain or snow. This problem is acute in development countries where speed breakers don’t always accompany warning signs. We propose an early warning system that uses sensor based technology to alert the driver in advance when the vehicle is approaching the speed breaker.</p>
+     <hr> 
+    <h2>Professional Experience 🧑🏻‍💻</h2>
         <h3>INFOSYS</h3>
         <p> Senior Systems Engineer with 3.5 years of experience in CPQ, IT problem-solving, application support and
             operations. Proficient in root cause analysis and delivering innovative solutions, ensuring high service
             level standards through strong collaboration with cross-functional teams.</p>
+    <hr>
+    <h3>Unisys</h3>
+    <p>As an IT analyst with extensive experience in business gathering, requirement analysis, and writing functional specifications, proficient in leveraging Generative AI to create content and articles for knowledge bases, incident management, and ITSM practices.</p>
     <hr>
     <h2>Awards 🏆</h2>
         <h3>INFOSYS</h3>
